# Poiseuille_MMV

./: README.md
dambreak_cu/: .nfs0000000006094b0b00000027  CMakeLists.txt  slurm-70514.out
dambreak_cu/include/: dam_kernels.hpp  timer.hpp
dambreak_cu/results_cuda/run_20251026_205006/: dambreak_trace.csv  summary.csv
dambreak_cu/src/: dambreak.cu  main.cpp
dambreak_hip/: .nfs000000008b7132ac00000022  .nfs000000008b7132ad00000023  CMakeLists.txt  bench_mvp.sbatch  dambreak_rocprof.sbatch  slurm-99.out
dambreak_hip/include/: dam_kernels.hpp  hip_compat_constants.h  params.hpp  timer.hpp
dambreak_hip/results/run_20251026_184901/: dambreak_trace.csv  dambreak_trace.db  dambreak_trace.hip_stats.csv  dambreak_trace.hsa_stats.csv  dambreak_trace.json  dambreak_trace.stats.csv  dambreak_trace.sysinfo.txt  summary.csv
dambreak_hip/rocprof_results_20251026_183855/: .nfs00000000060931e600000024  .nfs00000000060931e900000025
dambreak_hip/src/: dambreak.hip  main.cpp
externalForces_cu/: CMakeLists.txt  README_B1.md  b1_extforces.out  b1_nvprof.out  bench_b1.sbatch  nvprof_cuda_bs128.csv  nvprof_cuda_bs256.csv  results_b1_cuda.csv
externalForces_cu/build_bs_128/: CMakeCache.txt  Makefile  cmake_install.cmake  external_forces
externalForces_cu/build_bs_256/: CMakeCache.txt  Makefile  cmake_install.cmake  external_forces
externalForces_cu/include/: sph_utils.hpp
externalForces_cu/src/: external_forces.cu
externalForces_hip/: .nfs00000001866cade50000001d  .nfs00000001866cf55f00000019  .nfs00000001866d4c220000001c  .nfs00000001866d4c240000001e  .nfs0000000186a7ade00000001f  CMakeLists.txt  README_B1.md.txt  b1_hip_prof_min.out  bench_hip_prof_fixed.sbatch  results_b1_rocm_fixed.csv  rocprof_bs128_r1.csv  rocprof_bs128_r2.csv  rocprof_bs128_r3.csv  rocprof_bs256_r1.csv  rocprof_bs256_r2.csv  rocprof_bs256_r3.csv
externalForces_hip/build_broken/: CMakeCache.txt  Makefile  cmake_install.cmake
externalForces_hip/build_fixed/: CMakeCache.txt  Makefile  cmake_install.cmake  external_forces_fixed
externalForces_hip/include/: sph_utils.hpp
externalForces_hip/src/: .nfs000000008b47f37a0000001a
poiseuille_mvp_cu/: CMakeLists.txt  README.md  README.txt  bench_mvp.out  bench_mvp.sbatch  profile_uy_cuda.csv  results.csv  util_cuda_BS128.csv  util_cuda_BS256.csv
poiseuille_mvp_cu/build_bs_128/: CMakeCache.txt  Makefile  cmake_install.cmake  poiseuille
poiseuille_mvp_cu/build_bs_256/: CMakeCache.txt  Makefile  cmake_install.cmake  poiseuille
poiseuille_mvp_cu/include/: params.hpp  sph_kernels.hpp  timer.hpp
poiseuille_mvp_cu/src/: poiseuille.cu
poiseuille_mvp_rocm/: CMakeLists.txt  README.md  README.txt  bench_mvp.sbatch  bench_mvp_rocm.out  profile_uy.csv  results_rocm.csv
poiseuille_mvp_rocm/include/: sph_kernels.hpp  timer.hpp
poiseuille_mvp_rocm/src/: poiseuille.hip
